# outor

./: .clang-format  CMakeLists.txt  Doxyfile  README  README.md  main.cpp
include/: converter.hpp  global.hpp  outor.hpp  outortest.hpp  outortui.hpp  tempcon.hpp  tester.hpp  tui.hpp
include/interfaces/: ioutor.hpp  ioutortui.hpp  itui.hpp
legacy/: README
legacy/include/: global.h  outor.h
legacy/source/: main.c  outor.c
source/: converter.cpp  main.cpp  outor.cpp  outortest.cpp  outortui.cpp  tempcon.cpp  tui.cpp
